Update StaffController.java